<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="132dp"
        android:layout_height="96dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signin_email_layout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:helperTextEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signin_email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="15dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signin_password_layout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/signin_email_layout"
        app:layout_constraintStart_toStartOf="@+id/signin_email_layout"
        app:layout_constraintTop_toBottomOf="@+id/signin_email_layout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/Primary"
        app:helperTextEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signin_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/lock_icon"
            android:drawablePadding="15dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:buttonTint="@color/colorPrimary"
        android:text="@string/remember_me"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/signin_password_layout"
        app:layout_constraintTop_toBottomOf="@+id/signin_password_layout" />

    <TextView
        android:id="@+id/forgot_password_button"
        android:layout_width="125dp"
        android:layout_height="23dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="@+id/signin_password_layout"
        app:layout_constraintTop_toBottomOf="@+id/signin_password_layout"
        android:focusable="true"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/login"
        android:textColor="@color/textPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        android:backgroundTint="@color/colorPrimary"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/signin_with_fb_bn"
        android:layout_width="103dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/ic_btn_facebook"
        android:contentDescription="@string/loginwithfb" />

    <ImageView
        android:id="@+id/signin_with_gmail_bn"
        android:layout_width="103dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/ic_btn_google"
        android:contentDescription="@string/loginwithgmail" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_with_fb_bn"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:focusable="true"
        android:text="@string/register_now"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/signin_with_gmail_bn"
        />


</androidx.constraintlayout.widget.ConstraintLayout>