<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">




    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/back_icon" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorSecondaryDark"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/forgot_password_UI"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/textf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="@color/colorSecondaryDark"
        android:text="@string/please_enter_your_registered_email_to_reset_your_password"
        app:layout_constraintStart_toStartOf="@id/textView4"
        app:layout_constraintEnd_toEndOf="@id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forget_pass_mail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textf">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/email_icon"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawablePadding="15dp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/submit_forget_pass"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/submit"
        android:textSize="16sp"
        android:textColor="@color/textPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_pass_mail" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/or"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_forget_pass" />


    <Button
        android:id="@+id/send_sms"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/send_sms"
        android:textSize="16sp"
        android:textColor="@color/textPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or" />



</androidx.constraintlayout.widget.ConstraintLayout>