<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">



    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="132dp"
        android:layout_height="96dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_fullname_layout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:helperTextTextColor="@color/error"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_fullname_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/person_icon"
            android:drawablePadding="15dp"
            android:hint="@string/full_name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_email_layout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/signup_fullname_layout"
        app:layout_constraintStart_toStartOf="@+id/signup_fullname_layout"
        app:layout_constraintTop_toBottomOf="@+id/signup_fullname_layout"
        app:helperTextTextColor="@color/error">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="15dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_password_layout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@+id/signup_fullname_layout"
        app:layout_constraintTop_toBottomOf="@+id/signup_email_layout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/Primary"
        tools:layout_editor_absoluteY="426dp"
        app:helperTextTextColor="@color/error">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/lock_icon"
            android:drawablePadding="15dp"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_password_confirm_layout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@+id/signup_fullname_layout"
        app:layout_constraintTop_toBottomOf="@+id/signup_password_layout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/Primary"
        tools:layout_editor_absoluteY="426dp"
        app:helperTextTextColor="@color/error">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_password_confirm_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/lock_icon"
            android:drawablePadding="15dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/sign_up"
        android:textColor="@color/textPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_password_confirm_layout"
        android:backgroundTint="@color/colorPrimary"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/signup_textView"
        android:layout_width="323dp"
        android:layout_height="47dp"
        android:layout_marginTop="44dp"
        android:text="@string/terms_and_conditions"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_button"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="15sp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>