<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/back_icon" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/reset_password_title"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/textf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:text="@string/reset_password_info_text"
            app:layout_constraintStart_toStartOf="@id/textView4"
            app:layout_constraintEnd_toEndOf="@id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reset_pass_enter"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/Primary"
            app:layout_constraintTop_toBottomOf="@+id/textf">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/lock_icon"
                android:hint="@string/new_password_hint"
                android:inputType="textPassword"
                android:drawablePadding="15dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reset_pass_reenter"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/Primary"
            app:layout_constraintTop_toBottomOf="@+id/reset_pass_enter">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/lock_icon"
                android:hint="@string/new_password_confirm_hint"
                android:inputType="textPassword"
                android:drawablePadding="15dp"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/submit_forget_pass"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/submit"
            android:textSize="16sp"
            android:textColor="@color/textPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reset_pass_reenter" />

</androidx.constraintlayout.widget.ConstraintLayout>