<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ValidationActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/back_icon" />

    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/infoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/enter_the_code_sent_to_you_by_email_or_mobile_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />


    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/infoText">

        <EditText
            android:id="@+id/edt1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold"
            android:backgroundTint="@color/colorPrimary"/>


        <EditText
            android:id="@+id/edt2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold"
            android:backgroundTint="@color/colorPrimary"/>

        <EditText
            android:id="@+id/edt3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold"
            android:backgroundTint="@color/colorPrimary"/>

        <EditText
            android:id="@+id/edt4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold"
            android:backgroundTint="@color/colorPrimary" />

    </LinearLayout>

    <Button
        android:id="@+id/reset_verify_button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/verify"
        android:textSize="16sp"
        android:textColor="@color/textPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container" />


    <TextView
        android:id="@+id/not_received"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/resend_help_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_verify_button" />

    <TextView
        android:id="@+id/resend_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/resend_code_button"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/not_received"
        />

</androidx.constraintlayout.widget.ConstraintLayout>